--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.3.6",
     "@strapi/provider-upload-cloudinary": "^4.3.6",
     "@strapi/strapi": "4.3.6",
+    "lodash": "^4.17.21",
     "pg": "8.6.0"
   },
   "author": {
